# csng

./: Lib.html  cabal.project  csng.cabal  csng.haddock  doc-index.html  index.html  xin.cabal  xin.haddock
.github/workflows/: build.yml
src/internal/: AsList.hs  Change.hs  Coin.hs  Value.hs
src/internal/Algebra/: Apportion.hs  Equipartition.hs  NewApportion.hs  Partition.hs
src/internal/Algebra/Apportion/: Balanced.hs  MonoidMap.hs
src/internal/Algebra/Apportion/Old/: Apportion.hs  Balanced.hs
src/internal/Algebra/PartialOrd/: Extended.hs
src/internal/Data/: SizeDivisible.hs  Sliceable.hs
src/internal/Numeric/Natural/: Extra.hs
src/test/: ValueSpec.hs
src/test/Algebra/: EquipartitionSpec.hs  PartitionSpec.hs
src/test/Algebra/Apportion/: BalancedSpec.hs
src/test/Algebra/Apportion/Old/: BalancedSpec.hs
src/test/Test/Hspec/: Unit.hs
src/test/Test/QuickCheck/: Extended.hs
src/test/Test/QuickCheck/Classes/: Hspec.hs
